# PDCurses

./: .gitignore  CMakeLists.txt  pdcurses.vcxproj  pdcurses.vcxproj.filters
win32/: pdcscrn.c
wincon/: pdcscrn.c  pdcwin.h
